--- a/index.html
+++ b/index.html
@@ -642,18 +642,7 @@
             <p class="text-top">
             A collection of mini projects.
             </p>
-
             <div class="mini-project-list">
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-2.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-3.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-5.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-4.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-6.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-6.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-1.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-8.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-9.jpg"></a>
-              <a href="#" target="_blank" class="hoverable"><img class="mini-project" src="./imgs/mini-project-10.jpg"></a>
             </div>
           </section>
 
@@ -763,6 +752,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="./main.js" defer></script>
+    <script type="module" src="/js/main.js" defer></script>
   </body>
 </html>
